--- a/n/classifier.html
+++ b/n/classifier.html
@@ -18,7 +18,7 @@
         
         <div id="drop-area">
             <form class="my-form">
-                 <input type="file" id="fileInput" multiple style="display: none;" />
+                 <input type="file" id="fileInput" multiple webkitdirectory style="display: none;" />
                 <label for="fileInput" class="button">Select an Image</label>
                 <div class="drag-text">or drag and drop here</div>
                 <div id="displayArea"></div>
