--- a/n/classifier.html
+++ b/n/classifier.html
@@ -26,7 +26,7 @@
         </div>
         <div id="gallery"></div>
     </div>
-   <script type="module" src="script.js"></script> <!-- Changed to module -->
+   <script type="module" src="script.js"></script> 
 
 </body>
 </html>
