reorganized some stuff

--- a/public/classifier.html
+++ b/public/classifier.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Classifier</title>
-    <link rel="stylesheet" href="classifier.css">
+    <link rel="stylesheet" href="css/classifier.css">
 </head>
 <body>
     <div class="container">
@@ -26,7 +26,7 @@
         </div>
         <div id="gallery"></div>
     </div>
-   <script type="module" src="script.js"></script> 
+   <script type="module" src="js/script.js"></script> 
 
 </body>
 </html>
