can not figure out 404

--- a/public/classifier.html
+++ b/public/classifier.html
@@ -27,6 +27,8 @@
         <div id="gallery"></div>
     </div>
    <script type="module" src="js/script.js"></script> 
+   <link rel="stylesheet" href="css/classifier.css">
+
 
 </body>
 </html>
