--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         </section>
         
         <button class="get-started" onclick="window.location.href='classifier.html'">Get Started</button>
+        <link rel="stylesheet" href="css/style.css">
     </div>
 </body>
 </html>
