--- a/public/classifier.html
+++ b/public/classifier.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Classifier</title>
-    <link rel="stylesheet" href="css/classifier.css">
+    <link rel="stylesheet" href="/css/classifier.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="header-content">
-                <img src="images/logo.png" alt="Logo" class="logo">
+                <img src="/public/images/logo.png" alt="Logo" class="logo">
                 <h1>Animal Classifier</h1>
             </div>
             <p>Upload or drag and drop an image to classify the animal</p>
@@ -26,8 +26,7 @@
         </div>
         <div id="gallery"></div>
     </div>
-   <script type="module" src="js/script.js"></script> 
-   <link rel="stylesheet" href="css/classifier.css">
+   <script type="module" src="/js/script.js"></script> 
 
 
 </body>
