--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Classifier - Welcome</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <div class="main-container">
         <header>
-            <img src="images/logo.png" alt="Logo" class="logo">
+            <img src="/public/images/logo.png" alt="Logo" class="logo">
             <h1>Welcome to Animal Classifier</h1>
         </header>
         
@@ -20,7 +20,6 @@
         </section>
         
         <button class="get-started" onclick="window.location.href='classifier.html'">Get Started</button>
-        <link rel="stylesheet" href="css/style.css">
     </div>
 </body>
 </html>
