--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="images/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Classifier - Welcome</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="main-container">
         <header>
-            <img src="/public/images/logo.png" alt="Logo" class="logo">
+            <img src="images/logo.png" alt="Logo" class="logo">
             <h1>Welcome to Animal Classifier</h1>
         </header>
-        
+
         <section class="info">
             <p>Our Animal Classifier project is designed to help you easily identify various animals from images. This tool leverages advanced machine learning algorithms to provide fast and accurate results.</p>
             <p>Simply upload an image or drag and drop it to classify the animal in the picture.</p>
