--- a/public/classifier.html
+++ b/public/classifier.html
@@ -18,7 +18,7 @@
         
         <div id="drop-area">
             <form class="my-form">
-                <input type="file" id="fileInput" accept="image/*" multiple style="display: none;" />
+                <input type="file" id="fileInput" accept="image/*" multiple webkitdirectory style="display: none;" />
                 <label for="fileInput" class="button">Select an Image</label>
                 <div class="drag-text">or drag and drop here</div>
                 <div id="displayArea"></div>
